[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Level/VisualSelector.gd" type="Script" id=1]

[sub_resource type="Shader" id=5]
code = "/*
	魔法防御シェーダー 2 by あるる（きのもと 結衣）
	Magical Shield Shader 2 by Yui Kinomoto @arlez80

	MIT License
*/

shader_type spatial;
render_mode unshaded, depth_draw_never;

uniform vec4 barrier_color : hint_color = vec4( 0.05, 1.0, 0.5, 1.0 );
uniform float barrier_force = 1.0;
uniform float barrier_interval = 50.0;
uniform float barrier_speed = 10.0;

void fragment( )
{
	vec3 v = ( CAMERA_MATRIX * vec4( VERTEX, 1.0 ) ).xyz;
	float f = sin( v.y * barrier_interval + TIME * barrier_speed );
	ALBEDO = barrier_color.rgb;
	ALPHA = clamp( ( 1.0 - dot( NORMAL, VIEW ) ) * f * barrier_force, 0.4, 1.0 );
}

"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 5 )
shader_param/barrier_color = Color( 0, 0.0627451, 1, 1 )
shader_param/barrier_force = 10.0
shader_param/barrier_interval = 20.0
shader_param/barrier_speed = -4.0

[node name="VisualSelector" type="Spatial"]
script = ExtResource( 1 )
size = Vector3( 3, 0.4, 3 )

[node name="Mesh" type="CSGCombiner" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
material_override = SubResource( 7 )

[node name="OuterMesh" type="CSGBox" parent="Mesh"]
width = 3.0
height = 0.4
depth = 3.0

[node name="InnerMesh" type="CSGBox" parent="Mesh"]
operation = 2
width = 2.55
height = 0.5
depth = 2.55
